# loxsort

./: .gitignore  CMakeLists.txt  LICENSE  PROJECT_STATE.md  README.md  RELEASE_CHECKLIST.md  run_full1m_verify.bat
.github/workflows/: ci.yml  release.yml
bench/: lox_bench.c  lox_bench.h  lox_bench_main.c  lox_campaign.c  lox_campaign.h  lox_clock.h  lox_clock_posix.c  lox_clock_windows.c  lox_generators.c  lox_generators.h
cmake/: loxsortConfig.cmake.in
docs/: ALGORITHM_POLICY.md  API_CONTRACT.md  API_REFERENCE.md  ARCHITECTURE.md  BENCHMARK_AND_PROFILES.md  CONTRIBUTING.md  COOKBOOK.md  DECISIONS.md  FILE_LAYOUT.md  FUZZING.md  LOXSORT_SPEC.md  RELEASE_NOTES.md  TEST_STRATEGY.md
fuzz/: fuzz_algorithms.c  fuzz_main.c  fuzz_public_api.c
fuzz/corpus/public_api/: seed1.txt
include/loxsort/: loxsort.h
prompts/: 00_INDEX.md  01_foundation_api.md  02_algorithms.md  03_dispatcher_features.md  04_benchmark_profiles.md  05_tests_fuzz.md  06_build_ci_release.md
src/: lox_api.c  lox_dispatch.c  lox_features.c  lox_internal.h  lox_profile.c  lox_registry.c  lox_swap.c
src/algorithms/: lox_cycle.c  lox_insertion.c  lox_intro.c  lox_merge.c  lox_shell.c
tests/: test_algorithms.c  test_api.c  test_benchmark_tools.py  test_dispatch.c  test_features.c  test_generators.c  test_main.c  test_profile.c  test_stability.c  test_support.c  test_support.h
tools/: generate_benchmark_report.py  generate_profile.py  validate_benchmark.py  verify_resume.py
